# bitcoin_client

./: .gitignore  Cargo.toml  README.md  gen_script.py  kill.sh  kill_bash.sh  kill_server.sh  kill_supernode.sh  network.txt  run.sh  run_bash.sh  run_mining.sh  run_server.sh  run_supernode.sh  start_mining.sh
assignment-1/: Cargo.toml  README.md
assignment-1/src/: main.rs
midterm-report/: midterm-project_MidtermProject2_Report.docx
src/: account.rs  block.rs  blockchain.rs  config.rs  helper.rs  main.rs  mempool.rs  miner.rs  peers.rs  random_generator.rs  spread.rs  transaction.rs  transaction_generator.rs
src/api/: mod.rs
src/api/templates/: block.html  debug.html  header.html  mempool.html  state.html  tx.html
src/crypto/: hash.rs  merkle.rs
src/network/: estimator.rs  message.rs  mod.rs  peer.rs  server.rs  worker.rs
