[package]
name = "bitcoin"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
untrusted = "0.7.0"
ring = "0.16.10"
bincode = "1.2"
serde = { version = "1.0", features = ["derive"] }
hex = "0.4"
log = "0.4"
stderrlog = "0.4"
mio = "0.6"
slab = "0.4"
mio-extras = "2.0"
serde_json = "1.0"
tera = "1"
lazy_static = "1.4.0"
tiny_http = "0.6"
url = "2.1"
crossbeam = "0.7"
chrono = "0.4.10"
rand = "0.7.3"
hex-literal = "0.2"
timer = "0.2.0"
clap = { version = "2.33", features = ["wrap_help"]}
rand_distr = "0.2.2"

[features]
default = []
test-utilities = []
