[package]
name = "assignment-1"
version = "0.1.0"
authors = ["Jun Luo <junluo2@illinois.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ring = "0.16.9"
hex = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.2.1"
serde_derive = "1.0.104"
